[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interactables/TorchHolder.tscn" type="PackedScene" id=1]
[ext_resource path="res://AreaEnter.tscn" type="PackedScene" id=2]
[ext_resource path="res://RoomScenes/TorchPair.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.97154, 2.30071, 4.07982 )

[node name="TorchPair" type="Spatial"]
transform = Transform( -0.0449968, -0.258557, -0.964948, 0, 0.965926, -0.258819, 0.998987, -0.011646, -0.0434636, 1.52149, 1.89455, 17.9585 )
script = ExtResource( 5 )

[node name="TorchP1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 1.33878e-09, -3.72529e-09, -2.85218e-08, 1, 0, 0, 0 )
visible = false

[node name="TorchP2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.998987, -0.0116461, -0.0434638, 0.0116461, 0.866093, -0.499747, 0.0434638, -0.499747, -0.86508, 0.208254, 1.19665, 4.46596 )
visible = false

[node name="AreaEnter" parent="." instance=ExtResource( 2 )]
text = ""

[node name="CollisionShape" type="CollisionShape" parent="AreaEnter"]
transform = Transform( 0.997062, -3.38646e-09, 0.0765973, -0.0198248, 0.965926, 0.258059, -0.0739872, -0.258819, 0.963088, -0.162378, 0.591116, 2.20608 )
shape = SubResource( 1 )

[connection signal="body_shape_entered" from="AreaEnter" to="." method="_on_AreaEnter_body_shape_entered"]
[connection signal="body_shape_exited" from="AreaEnter" to="." method="_on_AreaEnter_body_shape_exited"]
